# tortoise-embeddings

./: AGENTS.md  MANIFEST.in  README.md  dev.ps1  dev.sh  env.example  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: python.yml  release.yml
tests/: conftest.py  models.py  remove_me.txt  test_gemini.py  test_migrations.py  test_vector_fields.py
tests/models/: __init__.py  gemini_model.py  migration_test_model.py  nullable_variable_vector_model.py  nullable_vector_model.py  successive_migration_test_models.py  variable_vector_model.py  vector_model.py
tortoise_embeddings/: __init__.py  aerich_vector_postgres_ddl.py  client.py  ddl.py  postgres_ddl.py  similarity.py  vector_asyncpg_db_client.py  vector_distance.py  vector_threshold_criterion.py
tortoise_embeddings/fields/: __init__.py  binary_vector.py  binary_vector_field.py  half_vector_field.py  sparse_vector.py  sparse_vector_field.py  vector_field.py
