[build-system]
# Declares the required tools for building the package (Setuptools and Wheel)
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# Essential project metadata
name = "tortoise-embeddings"
version = "0.0.1"
description = "Adds pgvector support to TortoiseORM. "
readme = "README.md"
requires-python = ">=3.14" # The minimum supported Python version
license = {file = "LICENSE"}
authors = [
    {name = "Kotz", email = "1812311+Kaoticz@users.noreply.github.com"},
]
# Add any required dependencies for your library here
dependencies = [
    # e.g., "requests>=2.28.1", remove this example, by the way.
]

[tool.setuptools.packages.find]
# Only package 'tortoise_embeddings' and any directory found inside it.
include = ["tortoise_embeddings", "tortoise_embeddings.*"]

[tool.mypy]
python_version = "3.14"
files = ["tortoise_embeddings/"]
strict = true
local_partial_types = true
exclude = ".venv/"


# Common stricter settings:
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

# Allows library code to import external libraries without type stubs.
# This is usually necessary, but can be configured per module if needed.
ignore_missing_imports = true

[tool.pyright]
typeCheckingMode = "standard"
analyzeUnannotatedFunctions = true
reportDeprecated = true
reportUnannotatedClassAttribute = true
reportImplicitOverride = true
reportUnknownLambdaType = false

[tool.pytest]
# Tells pytest where to look for tests
testpaths = ["tests"]

# Common flags: make output verbose and show local variables on failures
addopts = ["-v", "--showlocals"]

[project.optional-dependencies]
dev = [
    "setuptools",   # Often needed for tools in editable mode
    "build",        # Needed for publishing the library as a package
    "mypy",
    "basedpyright",
    "pytest>=9.0",
    "pytest-asyncio"
]
