[build-system]
requires = ['setuptools>=82.0.1', 'wheel>=0.46.3']
build-backend = 'setuptools.build_meta'

[project]
name = 'tortoise-embeddings'
version = '1.0.0'
description = 'Adds pgvector support to TortoiseORM.'
readme = {file = 'README.md', content-type = 'text/markdown'}
license = 'Apache-2.0'
license-files = ['LICENSE']
requires-python = '>=3.14'
authors = [
    {name = 'Kaoticz', email = '1812311+Kaoticz@users.noreply.github.com'},
]
dependencies = [
    'tortoise-orm>=0.25.0,<1.0.0',
    'aerich>=0.9.0',
    'asyncpg>=0.31.0',
    'pgvector>=0.4.0',
    'numpy>=2.4.0',
]

[tool.setuptools.packages.find]
include = ['tortoise_embeddings', 'tortoise_embeddings.*']

[tool.mypy]
python_version = '3.14'
files = ['tortoise_embeddings/']
strict = true
local_partial_types = true
exclude = '.venv/'
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.basedpyright]
typeCheckingMode = 'standard'
analyzeUnannotatedFunctions = true
reportDeprecated = true
reportUnannotatedClassAttribute = true
reportImplicitOverride = true
reportUnknownLambdaType = false

[tool.pytest.ini_options]
testpaths = ['tests']
addopts = ['-v', '--showlocals']
asyncio_mode = 'auto'
filterwarnings = [
    'ignore:_UnionGenericAlias is deprecated:DeprecationWarning:google.genai.types',
]

[project.optional-dependencies]
dev = [
    'setuptools==82.0.1',
    'build==1.4.2',
    'mypy',
    'basedpyright',
    'pytest>=9.0.2',
    'pytest-asyncio>=1.3.0',
    'google-genai>=1.70.0',
    'python-dotenv>=1.2.2'
]
